tests/baselines/reference/subtypingWithObjectMembers.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(12,7): error TS2415: Class 'B' incorrectly extends base class 'A'.
  Types of property 'bar' are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(22,7): error TS2415: Class 'B2' incorrectly extends base class 'A2'.
  Types of property '2.0' are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(32,7): error TS2415: Class 'B3' incorrectly extends base class 'A3'.
  Types of property ''2.0'' are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(43,11): error TS2415: Class 'B' incorrectly extends base class 'A'.
  Types of property 'bar' are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(53,11): error TS2415: Class 'B2' incorrectly extends base class 'A2'.
  Types of property '2.0' are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(63,11): error TS2415: Class 'B3' incorrectly extends base class 'A3'.
  Types of property ''2.0'' are incompatible.
    Type 'string' is not assignable to type 'Base'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts (6 errors) ====
    class Base { foo: string; }
    class Derived extends Base { bar: string; }
    class Derived2 extends Derived { baz: string; }
    
    // N and M have the same name, same accessibility, same optionality, and N is a subtype of M
    // foo properties are valid, bar properties cause errors in the derived class declarations
    class A {
        foo: Base;
        bar: Base;
    }
    
    class B extends A {
          ~
!!! error TS2415: Class 'B' incorrectly extends base class 'A'.
!!! error TS2415:   Types of property 'bar' are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
        foo: Derived; // ok
        bar: string; // error
    }
    
    class A2 {
        1: Base; 
        2.0: Base;
    }
    
    class B2 extends A2 {
          ~~
!!! error TS2415: Class 'B2' incorrectly extends base class 'A2'.
!!! error TS2415:   Types of property '2.0' are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
        1: Derived; // ok
        2: string; // error
    }
    
    class A3 {
        '1': Base;
        '2.0': Base;
    }
    
    class B3 extends A3 {
          ~~
!!! error TS2415: Class 'B3' incorrectly extends base class 'A3'.
!!! error TS2415:   Types of property ''2.0'' are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
        '1': Derived; // ok
        '2.0': string; // error
    }
    
    module TwoLevels {
        class A {
            foo: Base;
            bar: Base;
        }
    
        class B extends A {
              ~
!!! error TS2415: Class 'B' incorrectly extends base class 'A'.
!!! error TS2415:   Types of property 'bar' are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
            foo: Derived2; // ok
            bar: string; // error
        }
    
        class A2 {
            1: Base;
            2.0: Base;
        }
    
        class B2 extends A2 {
              ~~
!!! error TS2415: Class 'B2' incorrectly extends base class 'A2'.
!!! error TS2415:   Types of property '2.0' are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
            1: Derived2; // ok
            2: string; // error
        }
    
        class A3 {
            '1': Base;
            '2.0': Base;
        }
    
        class B3 extends A3 {
              ~~
!!! error TS2415: Class 'B3' incorrectly extends base class 'A3'.
!!! error TS2415:   Types of property ''2.0'' are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
            '1': Derived2; // ok
            '2.0': string; // error
        }
    }